# SenseNova-U1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  FAQ-en.md  FAQ.md  FAQ_CN.md  FAQ（常见问题汇总）-cn.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish-comfyui.yml
apps/comfyui/: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  __init__.py  config.py  image_utils.py  install.py  local_pipeline.py  nodes.py  pyproject.toml  requirements.txt
apps/comfyui/.github/: pull_request_template.md
apps/comfyui/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/comfyui/.github/workflows/: publish.yml  ruff.yml
apps/comfyui/example_workflows/: infographic.json  infographic_series.json
apps/comfyui/prompts/: builder_prompt.txt
apps/comfyui/web/: sensenova_interleave_preview.js
apps/comfyui/workflows/: editing.json  local_editing.json  local_interleave.json  local_t2i.json
docs/: base_vs_distill.md  gpu_mem_profiler.md  gpu_mem_profiler_CN.md  inference_infra.md  inference_infra_CN.md  parameter_breakdown.md  parameter_breakdown_CN.md  prompt_enhancement.md  prompt_enhancement_CN.md  showcases.md  showcases_CN.md  u1_infographic_model.md  u1_infographic_model_CN.md  u1_infographic_model_showcases.md  u1_infographic_showcases.md
evaluation/: README.md  README_CN.md
evaluation/docs/: image_generation.md  interleaved.md  understanding.md
evaluation/easi/config/: sensenova_models.py
evaluation/easi/scripts/: download_weights.sh  lb.py  serve.sh
evaluation/interleave/: interleaved.md
evaluation/interleave/BabyVision/: eval_babyvision.py  infer_babyvision.py
evaluation/interleave/OpenING/: eval_opening.py  infer_opening.py  summarize_GPT_scores.py
evaluation/interleave/Realunify/: calculate_score.py  calculate_score_ueg.py  inference_realunify.py  inference_realunify_ueg.py  launch_device_map_multi.sh  merge_shards.py  run.sh
evaluation/interleave/Unimmmu/: calculate_score.py  inference_unimmmu.py  launch_device_map_multi.sh  merge_shards.py  run.sh
examples/: README.md  README_CN.md
examples/editing/: inference.py
examples/editing/data/: samples.jsonl
examples/interleave/: inference.py  run.sh
examples/interleave/data/: samples.jsonl
examples/t2i/: inference.py
examples/t2i/data/: samples_infographic.jsonl  samples_infographic_V2.jsonl  samples_infographic_v2.jsonl
examples/vqa/: inference.py
examples/vqa/data/: questions.jsonl
output/ueg_interleave/: ueg_results.jsonl
scripts/: inspect_model_params.py
src/sensenova_u1/prompt_enhance/: enhancer.py
src/sensenova_u1/utils/: __init__.py  checkpoint_loading.py  model_loading.py  offload.py  profiler.py
training/: .gitignore  LICENSE  NOTICE  README.md  README_LORA.md  requirements.txt  train_sensenovau1.py
training/.github/workflows/: lint_check.yaml
training/configs/sensenovavl_qwen3_gen/: qwen3_base_30a3b_48layer_isp_mot_pt.py  sensenovau1_8b_mot_sft.py  sensenovau1_a3b_mot_sft.py
training/data/sample/: interleave__interleave_v1.6.1_it2i_merged_shuffle_filtered.jsonl  interleave_gen__ppt_pipeline_forward_nojson_zh_batch22.jsonl  it2i__dresscode_dress_gt_22k.jsonl  sample_data_meta.json  t2i__curated_t2i_ge_512_lt_1024.jsonl  text__math__Maths-College.jsonl  und__infographic_sft_20260402.jsonl  video__openvid_1m.jsonl
training/sensenovalm/accelerator/: abstract_accelerator.py  cuda_accelerator.py
training/sensenovalm/checkpoint/: checkpoint_manager.py  components.py  convert_to_hf.py  load_funcs.py  utils.py
training/sensenovalm/core/: engine.py  gradient_handler.py  model_average.py  naive_amp.py  trainer.py  trainer_builder.py
training/sensenovalm/data/: __init__.py  build_dataloader.py  train_state.py  utils.py
training/sensenovalm/initialize/: initialize_tensor.py  initialize_trainer.py  launch.py
training/sensenovalm/model/: base_model.py  builder.py  metrics.py  modeling_qwen3_moe_mot.py  mtp.py  registry.py  utils.py
training/tools/: download_disney_lora_dataset.py  export_lora_to_hf.py  key_mappings.json  prepare_lora_dataset.py  revert2hf.py
(+105 files in other folders)
