[project]
name = "comfyui-sensenova-u1"
version = "0.1.0"
description = "ComfyUI custom nodes for SenseNova chat and image generation APIs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OpenSenseNova" }]
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
